# bqt

./: .gitignore  .gitmodules  AGENTS.md  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  DASHBOARD.md  DEPLOY.md  GEMINI.md  GPT.md  HANDOFF.md  IDEAS.md  MEMORY.md  Manual.md  OS_TOOLKIT_ANALYSIS.md  QtBase.slnx  README.md  REUSE.toml  ROADMAP.md  SUBMODULE_DASHBOARD.md  SUBMODULE_INVENTORY.md  TODO.md  VERSION.md  VISION.md  bobui_cmdline.cmake  commit_message.txt  config.opt.in  config.redo.bat  config_help.txt  configure  configure.bat  configure.cmake  copilot-instructions.md  fix_demo_surface.py  fix_registry.py  go.mod  go.sum  licenseRule.json  (+4 more)
BobQ/omnicore/: CMakeLists.txt
OmniUI/apps/: CMakeLists.txt
OmniUI/omnicore/: CMakeLists.txt
OmniUI/tests/: CMakeLists.txt
config.tests/armintrin/: CMakeLists.txt  main.cpp
config.tests/loongarch_simd/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  README  examples.pro
examples/bobuiconcurrent/: CMakeLists.txt  README  bobuiconcurrent.pro
examples/bobuiestlib/: CMakeLists.txt  README  bobuiestlib.pro
examples/build_output/: CMakeCache.txt
examples/corelib/: CMakeLists.txt  corelib.pro
examples/dbus/: CMakeLists.txt  dbus.pro
examples/gui/: CMakeLists.txt  gui.pro
examples/network/: CMakeLists.txt  README  network.pro
examples/opengl/: CMakeLists.txt  README  opengl.pro
examples/sql/: CMakeLists.txt  README  connection.h  sql.pro
examples/vulkan/: CMakeLists.txt  vulkan.pro
examples/widgets/: CMakeLists.txt  widgets.pro
examples/xml/: CMakeLists.txt  README  xml.pro
src/: CMakeLists.txt
src/android/: CMakeLists.txt  REUSE.toml
src/build_output/: CMakeCache.txt
src/concurrent/: CMakeLists.txt  Concurrent_syncqt_all_args  Concurrent_syncqt_args  bobuiaskbuilder.h  bobuiaskbuilder.qdoc  bobuiconcurrent_global.h  bobuiconcurrentcompilertest.h  bobuiconcurrentfilter.cpp  bobuiconcurrentfilter.h  bobuiconcurrentfilterkernel.h  bobuiconcurrentfunctionwrappers.h  bobuiconcurrentiteratekernel.cpp  bobuiconcurrentiteratekernel.h  bobuiconcurrentmap.cpp  bobuiconcurrentmap.h  bobuiconcurrentmapkernel.h  bobuiconcurrentmedian.h  bobuiconcurrentreducekernel.h  bobuiconcurrentrun.cpp  bobuiconcurrentrun.h  bobuiconcurrentrunbase.h  bobuiconcurrentstoredfunctioncall.h  bobuiconcurrenttask.h  bobuiconcurrenttask.qdoc  bobuiconcurrentthreadengine.cpp  bobuiconcurrentthreadengine.h  preliminary_prl_meta_info_for_Concurrent_Release.txt  qtaskbuilder.h  qtaskbuilder.qdoc  qtconcurrent_global.h  qtconcurrentcompilertest.h  qtconcurrentfilter.cpp  qtconcurrentfilter.h  qtconcurrentfilterkernel.h  qtconcurrentfunctionwrappers.h  qtconcurrentiteratekernel.cpp  qtconcurrentiteratekernel.h  qtconcurrentmap.cpp  qtconcurrentmap.h  qtconcurrentmapkernel.h  (+10 more)
src/corelib/: BobUI6AndroidDynamicFeatureHelpers.cmake  BobUI6AndroidGradleHelpers.cmake  BobUI6AndroidMacros.cmake  BobUI6AndroidPermissionHelpers.cmake  BobUI6CTestMacros.cmake  BobUI6CoreConfigExtras.cmake.in  BobUI6CoreConfigureFileTemplate.in  BobUI6CoreDeploySupport.cmake  BobUI6CoreMacros.cmake  BobUI6CoreResourceInit.in.cpp  BobUI6WasmMacros.cmake  BobUICompressMimeDatabase.cmake  BobUICore  BobUICore.dynlist.in  CMakeLists.txt  Core_syncqt_all_args  Core_syncqt_args  QtCore_header_check_exceptions  bobui_cmdline.cmake  configure.cmake  debug_script.py  preliminary_prl_meta_info_for_Core_Release.txt  qt_lib_core_private.pri
src/dbus/: BobUI6DBusMacros.cmake  BobUIDBus  CMakeLists.txt  DBus_syncqt_all_args  DBus_syncqt_args  bobui_attribution.json  bobuidbusglobal.h  bobuidbusglobal_p.h  dbus_minimal_p.h  preliminary_prl_meta_info_for_DBus_Release.txt  qdbus_symbols.cpp  qdbus_symbols_p.h  qdbusabstractadaptor.cpp  qdbusabstractadaptor.h  qdbusabstractadaptor_p.h  qdbusabstractinterface.cpp  qdbusabstractinterface.h  qdbusabstractinterface_p.h  qdbusargument.cpp  qdbusargument.h  qdbusargument_p.h  qdbusconnection.cpp  qdbusconnection.h  qdbusconnection_p.h  qdbusconnectioninterface.cpp  qdbusconnectioninterface.h  qdbusconnectionmanager.cpp  qdbusconnectionmanager_p.h  qdbuscontext.cpp  qdbuscontext.h  qdbuscontext_p.h  qdbusdemarshaller.cpp  qdbuserror.cpp  qdbuserror.h  qdbusextratypes.cpp  qdbusextratypes.h  qdbusintegrator.cpp  qdbusintegrator_p.h  qdbusinterface.cpp  qdbusinterface.h  (+38 more)
src/entrypoint/: CMakeLists.txt  bobuientrypoint_win.cpp  preliminary_prl_meta_info_for_EntryPointImplementation_Release.txt
src/gui/: BobUIGui  BobUIGui.dynlist.in  CMakeLists.txt  Gui_syncqt_all_args  Gui_syncqt_args  QtGui_header_check_exceptions  bobui_cmdline.cmake  configure.cmake  preliminary_prl_meta_info_for_Gui_Release.txt  qt_lib_gui_private.pri
src/network/: BobUINetwork  CMakeLists.txt  Network_syncqt_all_args  Network_syncqt_args  bobui_cmdline.cmake  configure.cmake  preliminary_prl_meta_info_for_Network_Release.txt  qt_lib_network_private.pri
src/opengl/: CMakeLists.txt  OpenGL_syncqt_all_args  OpenGL_syncqt_args  QtOpenGL_header_check_exceptions  bobuiopenglglobal.h  preliminary_prl_meta_info_for_OpenGL_Release.txt  qopengl2pexvertexarray.cpp  qopengl2pexvertexarray_p.h  qopenglbuffer.cpp  qopenglbuffer.h  qopenglcompositor.cpp  qopenglcompositor_p.h  qopenglcompositorbackingstore.cpp  qopenglcompositorbackingstore_p.h  qopenglcustomshaderstage.cpp  qopenglcustomshaderstage_p.h  qopengldebug.cpp  qopengldebug.h  qopenglengineshadermanager.cpp  qopenglengineshadermanager_p.h  qopenglengineshadersource_p.h  qopenglframebufferobject.cpp  qopenglframebufferobject.h  qopenglframebufferobject_p.h  qopenglfunctions_1_0.cpp  qopenglfunctions_1_0.h  qopenglfunctions_1_1.cpp  qopenglfunctions_1_1.h  qopenglfunctions_1_2.cpp  qopenglfunctions_1_2.h  qopenglfunctions_1_3.cpp  qopenglfunctions_1_3.h  qopenglfunctions_1_4.cpp  qopenglfunctions_1_4.h  qopenglfunctions_1_5.cpp  qopenglfunctions_1_5.h  qopenglfunctions_2_0.cpp  qopenglfunctions_2_0.h  qopenglfunctions_2_1.cpp  qopenglfunctions_2_1.h  (+81 more)
src/openglwidgets/: CMakeLists.txt  OpenGLWidgets_syncqt_all_args  OpenGLWidgets_syncqt_args  (+4 more)
tests/: CMakeLists.txt  README
(+13800 files in other folders)
