# OmniUI Applications

add_subdirectory(OmniKernelMon)
add_subdirectory(OmniQuantumIDE)
add_subdirectory(OmniBioExplorer)
add_subdirectory(OmniSpaceControl)
add_subdirectory(OmniTimeTraveler)
add_subdirectory(OmniSingularityControl)
add_subdirectory(OmniGenesisApp)
add_subdirectory(OmniVoidWatcher)
add_subdirectory(OmniMultiverseExplorer)
add_subdirectory(OmniNanoFactory)
add_subdirectory(OmniMind)
add_subdirectory(OmniOmega)
add_subdirectory(OmniPortalExplorer)
add_subdirectory(OmniSpiritGuide)
add_subdirectory(OmniCreatorStudio)
add_subdirectory(OmniHardware)
add_subdirectory(OmniSynth)
add_subdirectory(OmniDash)
add_subdirectory(OmniScribe)
add_subdirectory(OmniStudio)
add_subdirectory(OmniChat)
add_subdirectory(OmniCiv)
add_subdirectory(OmniVRLauncher)
add_subdirectory(OmniGodMode)
add_subdirectory(OmniMLTrainer)
